# board_game

./: .gitignore  README.md
source/: .dockerignore  Dockerfile  README.md  database.bd  estrutura_diretorios.txt  pyproject.toml
source/app/: __init__.py  app.py
source/app/config/: collections_exceptions.py  log.py  settings.py
source/app/data/: database.py  models.py  schemas.py
source/app/middleware/: middle.py  security.py
source/app/models/: CacheData.py  TokenData.py  Users.py  __init__.py  base_model.py
source/app/modules/: db_tools.py
source/app/routers/: jwt_security.py  users.py
source/app/schemas/: schemas_jwt.py  schemas_users.py
source/app/security/: security.py
source/tests/: conftest.py
source/tests/mocks/: factories.py
source/tests/tests_app/: test_app.py
source/tests/tests_config/: test_exceptions.py  test_logs.py
source/tests/tests_database/: test_database.py  test_db.py
source/tests/tests_middleware/: test_middleware.py
source/tests/tests_modules/: test_db_tools.py
source/tests/tests_routers/: test_jwt_security.py  test_users.py
source/tests/tests_security/: test_security.py
